# AI_Chatbot_Assitance

./: README.md  api_server.py  app.py  app_streamlit.py  pyproject.toml  requirements.txt
faiss_store/: faiss.index  metadata.pkl
src/: data_extraction.py  data_loader.py  report.py  search.py
