[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.2.2",
    "dict>=2018.11.19",
    "docx>=0.2.4",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.1",
    "fpdf>=1.7.2",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.1",
    "langchain-groq>=1.0.0",
    "logger>=1.4",
    "pillow>=11.3.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "typing>=3.10.0.0",
    "unstructured>=0.18.15",
]
